QAbstractItemView::sizeHintForRow()/Column: Check for null delegate.

The delegate may be null in QHeaderView.

Task-number: QTBUG-48543
Change-Id: I4d3ba104b0b57431e8765271dc2dc880be096672
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>

cregit: 2042a091a3e88a77d52b6cdb62f3fc9153d7f5d7 https://github.com/qt/qtbase/commit/2042a091a3e88a77d52b6cdb62f3fc9153d7f5d7